# crewai_test

document_analyser/: .gitignore  Makefile  README.md  pyproject.toml  report.md
document_analyser/src/document_analyser/: crew.py  main.py
